--- a/utils_code/cmd.ipynb
+++ b/utils_code/cmd.ipynb
@@ -29,7 +29,43 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Mount to another gg drive account\n",
+    "# Link: https://stackoverflow.com/questions/71695387/connecting-to-a-different-google-drive-than-the-one-logged-into-google-colab\n",
+    "# Step 1\n",
+    "!sudo add-apt-repository ppa:alessandro-strada/ppa\n",
+    "!sudo apt update\n",
+    "!sudo apt install google-drive-ocamlfuse\n",
+    "!google-drive-ocamlfuse\n",
+    "# --> Click to the url: Failure: <url>\n",
+    "# Step 2\n",
+    "!sudo apt-get install w3m # to act as web browser \n",
+    "!xdg-settings set default-web-browser w3m.desktop # to set default browser \n",
+    "%cd /content\n",
+    "!mkdir drive\n",
+    "%cd drive\n",
+    "!mkdir \"MyDrive\"\n",
+    "!google-drive-ocamlfuse \"/content/drive/MyDrive\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Label Studio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "set LABEL_STUDIO_LOCAL_FILES_SERVING_ENABLED=true\n",
+    "set LABEL_STUDIO_LOCAL_FILES_DOCUMENT_ROOT=absolute_path\n",
+    "set LABEL_STUDIO_LOCAL_FILES_DOCUMENT_ROOT=absolute_path\n",
+    "# D:\\DataSet\\Receipt\\Vietnamese_Receipt\n",
+    "# D:\\DataSet\\Receipt\\mocr2021\n",
+    "label-studio start\n"
+   ]
   }
  ],
  "metadata": {
